# ChangeLog for net-misc/asterisk-app_nv_faxdetect
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_nv_faxdetect/Attic/ChangeLog,v 1.6 2006/04/15 23:41:18 stkn Exp $

  15 Apr 2006; Stefan Knoblich <stkn@gentoo.org>
  +files/app_nv_faxdetect-1.0.6-ast10.diff,
  +files/app_nv_faxdetect-1.0.6-ast12.diff,
  -files/app_nv_faxdetect-1.0.6-aststable.diff,
  asterisk-app_nv_faxdetect-1.0.6.ebuild:
  Add patch for asterisk-1.2.x, submitted by Brad House
  <brad@mainstreetsoftworks.com> in bug #119417.

  19 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-app_nv_faxdetect-1.0.6.ebuild:
  Stable on x86.

  16 Aug 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-app_nv_faxdetect-1.0.6.ebuild:
  Made ebuild ready for asterisk-1.2.0(_pre).

  08 Jul 2005; David Holm <dholm@gentoo.org>
  asterisk-app_nv_faxdetect-1.0.6.ebuild:
  Added to ~ppc.

  29 Jun 2005; Stefan Knoblich <stkn@gentoo.org> :
  Modified DESCRIPTION, making it more clear this ebuild contains both detect
  apps

*asterisk-app_nv_faxdetect-1.0.6 (31 May 2005)

  31 May 2005; Stefan Knoblich <stkn@gentoo.org> +metadata.xml,
  +files/app_nv_faxdetect-1.0.6-astcfg.diff,
  +files/app_nv_faxdetect-1.0.6-aststable.diff,
  +asterisk-app_nv_faxdetect-1.0.6.ebuild:
  Initial import. Thanks to Josef, Joe Stroller and of course
  Justin Newman (Newmantelecom).
