@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_nv_faxdetect/Attic/asterisk-app_nv_faxdetect-1.0.6.ebuild,v 1.6 2006/04/15 23:41:18 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_nv_faxdetect/Attic/asterisk-app_nv_faxdetect-1.0.6.ebuild,v 1.7 2007/01/06 16:30:24 drizzt Exp $
 
 inherit eutils
 
@@ -18,22 +18,22 @@ KEYWORDS="~amd64 ~ppc x86"
 
 DEPEND=">=net-misc/asterisk-1.0.5-r1"
 
-S=${WORKDIR}/${MY_PN}-${PV}
+S="${WORKDIR}"/${MY_PN}-${PV}
 
 src_unpack() {
 	unpack ${A}
 
-	cd ${S}
+	cd "${S}"
 	# use asterisk-config...
-	epatch ${FILESDIR}/app_nv_faxdetect-${PV}-astcfg.diff
+	epatch "${FILESDIR}"/app_nv_faxdetect-${PV}-astcfg.diff
 
 	if has_version "<net-misc/asterisk-1.1.0"; then
 		einfo "Building for Asterisk-1.0.x"
 		# change callerid to asterisk stable
-		epatch ${FILESDIR}/app_nv_faxdetect-${PV}-ast10.diff
+		epatch "${FILESDIR}"/app_nv_faxdetect-${PV}-ast10.diff
 	else
 		einfo "Building for Asterisk-1.2.x"
-		epatch ${FILESDIR}/app_nv_faxdetect-${PV}-ast12.diff
+		epatch "${FILESDIR}"/app_nv_faxdetect-${PV}-ast12.diff
 	fi
 }
 
@@ -42,14 +42,14 @@ src_compile() {
 }
 
 src_install() {
-	make DESTDIR=${D} install || die
+	make DESTDIR="${D}" install || die
 }
 
 pkg_postinst() {
-	einfo "See"
-	einfo ""
-	einfo "  http://www.voip-info.org/wiki-NVFaxDetect"
-	einfo "  http://www.voip-info.org/wiki-NVBackgroundDetect"
-	einfo ""
-	einfo "for more information"
+	elog "See"
+	echo
+	elog "  http://www.voip-info.org/wiki-NVFaxDetect"
+	elog "  http://www.voip-info.org/wiki-NVBackgroundDetect"
+	echo
+	elog "for more information"
 }
