@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/asterisk-app_nv_faxdetect
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_nv_faxdetect/Attic/ChangeLog,v 1.6 2006/04/15 23:41:18 stkn Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_nv_faxdetect/Attic/ChangeLog,v 1.7 2007/01/06 16:30:24 drizzt Exp $
+
+  06 Jan 2007; Timothy Redaelli <drizzt@gentoo.org>
+  asterisk-app_nv_faxdetect-1.0.6.ebuild:
+  s/einfo/elog/
 
   15 Apr 2006; Stefan Knoblich <stkn@gentoo.org>
   +files/app_nv_faxdetect-1.0.6-ast10.diff,
